--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "citizensyndicate",
+  "homepage": "https://hthrace.github.io/citizenSyndicate/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
